--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "http": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
